--- a/source/0.3a/src/main/webapp/register.xhtml
+++ b/source/0.3a/src/main/webapp/register.xhtml
@@ -29,66 +29,67 @@
   <div class="w3-cell-row w3-section">
 
     <div class="w3-container w3-cell w3-cell-middle w3-mobile w3-twothird">
-      <form class="w3-container">
+      <h:form id="patientRegistrationForm" class="w3-container">
         <label class="w3-text-blue">Email Address</label>
         <h:inputText id="userEmail"
-                     value="user@domain.end"
+                     value="#{beanDButil.email}"
                      required="true"
                      class="w3-input w3-border" />
         <label class="w3-text-blue">Username</label>
         <h:inputText id="userUsername"
-                     value="USERNAME"
+                     value="#{beanDButil.username}"
                      required="true"
                      class="w3-input w3-border" />
         <label class="w3-text-blue">Password</label>
         <h:inputSecret id="userPassword"
-                       value=""
+                       value="#{beanDButil.password}"
                        required="true"
                        class="w3-input w3-border" />
         <label class="w3-text-blue">Password Confirmation</label>
         <h:inputSecret id="userPassword2"
-                       value=""
+                       value="#{beanDButil.password}"
                        required="true"
                        class="w3-input w3-border" />
         <label class="w3-text-blue">First Name:</label>
         <h:inputText id="userFirstName"
-                     value="FIRST NAME"
+                     value="#{beanDButil.firstName}"
                      required="true"
                      class="w3-input w3-border" />
         <label class="w3-text-blue">Middle Initial</label>
         <h:inputText id="userMiddleInitial"
-                     value="MIDDLE INITIAL"
+                     value="#{beanDButil.middleInitial}"
                      required="false"
                      class="w3-input w3-border" />
         <label class="w3-text-blue">Last Name</label>
         <h:inputText id="userLastName"
-                     value="LAST NAME"
+                     value="#{beanDButil.lastName}"
                      required="true"
                      class="w3-input w3-border" />
         <label class="w3-text-blue">Sex</label>
-        <select name="sex" 
+        <h:selectOneMenu name="sex"
+		value="#{beanDButil.sex}"
                 required="true"
                 class="w3-select">
-          <option value="M">Male</option>
-          <option value="F">Female</option>
-          <option value="N">Nonbinary</option>
-          <option value="X">Do Not Wish To Disclose</option>
-        </select></td></tr>
+          <f:selectItem itemValue="M" itemLabel="Male" />
+          <f:selectItem itemValue="F" itemLabel="Female" />
+          <f:selectItem itemValue="N" itemLabel="Nonbinary" />
+          <f:selectItem itemValue="X" itemLabel="Do Not Wish To Disclose" />
+        </h:selectOneMenu>
         <label class="w3-text-blue">Physical Address</label>
-        <h:inputText id="userAddress"
-                     value="1 Two Street, Threeville, ZZ 99999"
+        <h:inputTextarea id="userAddress"
+                     value="#{beanDButil.address}"
                      required="false"
                      class="w3-input w3-border" />
         <label class="w3-text-blue">Phone Number</label>
         <h:inputText id="userPhone"
-                     value="000-000-0000"
+                     value="#{beanDButil.phone}"
                      required="false"
                      class="w3-input w3-border" />
         <h:commandButton value="REGISTER"
-                         action="#"
+                         action="#{beanDButil.addPatient()}"
                          class="w3-button w3-teal"></h:commandButton>
         <button type="reset" class="w3-button w3-teal">RESET</button>
-      </form>
+      </h:form>
     </div>
 
     <div id="right" class="w3-container w3-cell w3-cell-middle w3-mobile w3-third">
