--- a/source/0.4/src/main/webapp/main.xhtml
+++ b/source/0.4/src/main/webapp/main.xhtml
@@ -26,29 +26,29 @@
             <div class="w3-modal-content w3-container w3-card w3-animate-zoom">
               <span onclick="document.getElementById('modalPatientProfile').style.display='none'" class="w3-button w3-red w3-display-topright">X</span>
                 <h:form id="user-profile-form" class="w3-container">
-                  <h:dataTable value="#{beanDButil.getPatient(beanPatient.username)}" var="pt" class="w3-table-all">
+                  <h:dataTable value="#{beanPatient.getPatient(beanPatient.username)}" var="pt" class="w3-table-all">
                     <h:column rowHeader="true"><f:facet name="header"><label class="w3-text-blue">First Name</label></f:facet>
 	                    #{pt.firstName}
                     <h:inputText id="userFirstName"
-                       value="#{beanPatient.firstName}"
+                       value="#{beanDButil.firstName}"
                        required="true"
                        class="w3-input w3-border" /></h:column>
                     <h:column rowHeader="true"><f:facet name="header"><label class="w3-text-blue">Middle Initial</label></f:facet>
 	                    #{pt.middleInitial} 
                     <h:inputText id="userMiddleInitial"
-                       value="#{beanPatient.middleInitial}"
+                       value="#{beanDButil.middleInitial}"
                        required="false"
                        class="w3-input w3-border" /></h:column>
     					      <h:column rowHeader="true"><f:facet name="header"><label class="w3-text-blue">Last Name</label></f:facet>
 						          #{pt.lastName} 
 					          <h:inputText id="userLastName"
-                       value="#{beanPatient.lastName}"
+                       value="#{beanDButil.lastName}"
                        required="true"
                        class="w3-input w3-border" /></h:column>
 					          <h:column rowHeader="true"><f:facet name="header"><label class="w3-text-blue">Sex</label></f:facet>
 					            #{pt.sex}
 					            <h:selectOneListbox name="sex"
-													value="#{beanPatient.sex}"
+													value="#{beanDButil.sex}"
                						 required="true"
                						 class="w3-select">
         						    <f:selectItem itemValue="M" itemLabel="Male" />
@@ -59,40 +59,40 @@
        					   <h:column rowHeader="true"><f:facet name="header"><label class="w3-text-blue">Email Address</label></f:facet>
 	    				      #{pt.email} 
       					    <h:inputText id="userEmail"
-                       value="#{beanPatient.email}"
+                       value="#{beanDButil.email}"
                        required="true"
 											 class="w3-input w3-border" /></h:column></h:dataTable>
-										<h:dataTable value="#{beanDButil.getPatient(beanPatient.username)}" var="pt" class="w3-table-all">
+										<h:dataTable value="#{beanPatient.getPatient(beanPatient.username)}" var="pt" class="w3-table-all">
    					       <h:column rowHeader="true"><f:facet name="header"><label class="w3-text-blue">Physical Address</label></f:facet>
 	      				    #{pt.address} 
         					  <h:inputText id="userAddress"
-                       value="#{beanPatient.address}"
+                       value="#{beanDButil.address}"
                        required="false"
                        class="w3-input w3-border" /></h:column>
       						    <h:column rowHeader="true"><f:facet name="header"><label class="w3-text-blue">Phone Number</label></f:facet>
       						  	  #{pt.phone} 
      						     <h:inputText id="userPhone"
-                       value="#{beanPatient.phone}"
+                       value="#{beanDButil.phone}"
                        required="false"
                        class="w3-input w3-border" /></h:column>
       					    <h:column rowHeader="true"><f:facet name="header"><label class="w3-text-blue">Username</label></f:facet>
 	          #{pt.username} 
           <h:inputText id="userUsername"
-                       value="#{beanPatient.username}"
+                       value="#{beanDButil.username}"
                        required="true"
                        class="w3-input w3-border" /></h:column>
 	    	  <h:column><f:facet name="header"><label class="w3-text-blue">Password</label></f:facet>
           <h:inputSecret id="userPassword"
-                         value="#{beanPatient.password}"
+                         value="#{beanDButil.password}"
                          required="true"
                          class="w3-input w3-border" />
           <label class="w3-text-blue">Password Confirmation</label>
           <h:inputSecret id="userPassword2"
-                         value="#{beanPatient.password2}"
+                         value="#{beanDButil.password2}"
                          required="true"
                          class="w3-input w3-border" /></h:column>
           <h:column rowHeader="true"><h:commandButton value="UPDATE PROFILE"
-                           action="#{beanPatient.updateProfile()}"
+                           action="#{beanDButil.updatePatient()}"
                            class="w3-button w3-teal"></h:commandButton>
           <button type="reset" class="w3-button w3-teal">RESET</button></h:column>
       	</h:dataTable>
@@ -140,22 +140,6 @@
           #{med.prescriber}
         </h:column>
       </h:dataTable>
-<!--
-      <div id="modal01" class="w3-modal">
-        <div class="w3-modal-content w3-container w3-card w3-animate-zoom">
-          <span onclick="document.getElementById('modal01').style.display='none'" class="w3-button w3-display-topright">X</span>
-          <table class="w3-table-all">
-            <tr><h1>MEDICATION NAME</h1></tr>
-            <tr><h2>Manufacturer</h2></tr>
-            <tr>
-              <p>Some text about the medication. This can be fetched from the database or resource text/xml files in a folder.</p>
-            </tr>
-          </table>
-          <button onclick="document.getElementById('modal01').style.display='none'" type="button" class="w3-button w3-red">CLOSE</button>
-        </div>
-      </div>
--->
-    </div>
 
     <div id="bottom" class="w3-container w3-mobile w3-card w3-teal">
       <div class="w3-container w3-bar w3-mobile w3-row w3-padding">
