--- a/source/0.4/src/main/webapp/provider-patients.xhtml
+++ b/source/0.4/src/main/webapp/provider-patients.xhtml
@@ -85,25 +85,22 @@
           <div class="w3-modal-content w3-card w3-center w3-animate-zoom">
             <button onclick="document.getElementById('modalAddMed').style.display='none'" class="w3-button w3-red w3-display-topright">X</button>
             <h:form id="add-patient-form" class="w3-container">
-              <label class="w3-text-blue">Last Name</label>
+							<h:column>#{beanProvider.username}</h:column>
+              <h:column><label class="w3-text-blue">Last Name</label>
               <h:inputText id="patientLastName"
-                           value="#"
+                           value="#{beanDButil.lastName}"
 		           class="w3-input w3-border"></h:inputText>
-              <h:message for="patientLastName"></h:message>
-              <label class="w3-text-blue">First Name</label>
+              <h:message for="patientLastName"></h:message></h:column>
+              <h:column><label class="w3-text-blue">First Name</label>
               <h:inputText id="patientFirstName"
-                           value="#"
+                           value="#{beanDButil.firstName}"
 		           class="w3-input w3-border"></h:inputText>
-              <h:message for="patientFirstName"></h:message>
-              <label class="w3-text-blue">MI</label>
-              <h:inputText id="patientMidInit"
-                           value="#"
-	      	           class="w3-input w3-border"></h:inputText>
-              <h:commandButton value="ADD"
-                               action="#"
+              <h:message for="patientFirstName"></h:message></h:column>
+              <h:column><h:commandButton value="ADD"
+                               action="#{beanDButil.updatePatientProvider()}"
                                class="w3-button w3-teal"></h:commandButton>
               <button class="w3-button w3-teal">RESET</button>
-	      <button onclick="document.getElementById('modalAddPatient').style.display='none'" class="w3-button w3-red">CLOSE</button>
+	      <button onclick="document.getElementById('modalAddPatient').style.display='none'" class="w3-button w3-red">CLOSE</button></h:column>
             </h:form>
           </div>
         </div>
