--- a/source/0.4/src/main/webapp/provider-patients.xhtml
+++ b/source/0.4/src/main/webapp/provider-patients.xhtml
@@ -68,12 +68,74 @@
         </h:column>
         <h:column>
           <f:facet name="header">Medications</f:facet>
-          <a href="provider-patient-meds.xhtml">
-            <button class="w3-button w3-green">VIEW</button>
-          </a>
+          <h:commandButton action="#{beanDButil.setPatient(patient.username)}" onclick="document.getElementById('modalPatientMeds').style.display='block'" class="w3-button w3-green">VIEW</h:commandButton>
         </h:column>
       </h:dataTable>
-
+			<div id="modalPatientMeds" class="w3-modal">
+        <div class="w3-modal-content w3-card w3-center w3-animate-zoom">
+          <button onclick="document.getElementById('modalPatientMeds').style.display='none'" class="w3-button w3-red w3-display-topright">X</button>
+					<div class="w3-container"><h2>#{beanDButil.patient}</h2></div>
+					<h:dataTable value="#{beanDButil.getMedications(beanDButil.patient)}" var="med" class="w3-table-all">
+						<h:column>
+							<label class="w3-text-blue">Name</label>
+							#{med.name}
+						</h:column>
+						<h:column>
+							<label class="w3-text-blue">Dosage</label>
+							#{med.dosage}
+						</h:column>
+						<h:column>
+							<label class="w3-text-blue">Unit</label>
+							#{med.doseUnit}
+						</h:column>
+						<h:column>
+							<label class="w3-text-blue">Issued</label>
+							#{med.issueDate}
+						</h:column>
+						<h:column>
+							<label class="w3-text-blue">Expires</label>
+							#{med.expDate}
+						</h:column>
+					</h:dataTable>
+          <h:form id="add-med-form" class="w3-container">
+					  <h:column><label class="w3-text-blue">Name</label>
+              <h:inputText id="medName"
+                           value="#{beanDButil.name}"
+		                       class="w3-input w3-border"></h:inputText>
+						</h:column>
+						<h:column><label class="w3-text-blue">Dosage</label>
+              <h:inputText id="medDosage"
+                           value="#{beanDButil.dosage}"
+		                       class="w3-input w3-border"></h:inputText>
+						</h:column>
+						<h:column><label class="w3-text-blue">Unit</label>
+              <h:selectOneMenu id="medDoseUnit"
+                           value="#{beanDButil.doseUnit}"
+		                       class="w3-input w3-border">
+								<f:selectItem itemValue="g" itemLabel="gram" />
+								<f:selectItem itemValue="mg" itemLabel="milligram" />
+								<f:selectItem itemValue="mcg" itemLabel="microgram" />
+							</h:selectOneMenu>
+						</h:column>
+						<h:column><label class="w3-text-blue">Issued</label>
+              <h:inputText id="medIssueDate"
+                           value="#{beanDButil.issueDate}"
+		                       class="w3-input w3-border"></h:inputText>
+						</h:column>
+						<h:column><label class="w3-text-blue">Expires</label>
+              <h:inputText id="medExpDate"
+                           value="#{beanDButil.expDate}"
+		                       class="w3-input w3-border"></h:inputText>
+						</h:column>
+						<h:column><h:commandButton value="ADD"
+                             action="#{beanDButil.addMedication()}"
+                             class="w3-button w3-teal"></h:commandButton>
+              <button class="w3-button w3-teal">RESET</button>
+	            <button onclick="document.getElementById('modalPatientMeds').style.display='none'" class="w3-button w3-red">CLOSE</button>
+						</h:column>
+          </h:form>
+        </div>
+      </div>
     </div>
 
     <div id="bottom" class="w3-container w3-mobile w3-card">
@@ -83,7 +145,7 @@
         </div>
         <div id="modalAddPatient" class="w3-modal">
           <div class="w3-modal-content w3-card w3-center w3-animate-zoom">
-            <button onclick="document.getElementById('modalAddMed').style.display='none'" class="w3-button w3-red w3-display-topright">X</button>
+            <button onclick="document.getElementById('modalAddPatient').style.display='none'" class="w3-button w3-red w3-display-topright">X</button>
             <h:form id="add-patient-form" class="w3-container">
 							<h:column>#{beanProvider.username}</h:column>
               <h:column><label class="w3-text-blue">Last Name</label>
