--- a/source/0.4/src/main/webapp/test.xhtml
+++ b/source/0.4/src/main/webapp/test.xhtml
@@ -257,7 +257,7 @@
               <h:inputText id="medName" value="#{beanDButil.name}" class="w3-input w3-border" />
             </h:column>
             <h:column><f:facet name="header"><label class="w3-text-blue">Dosage</label></f:facet>
-              <h:inputSecret id="medDosage" value="#{beanDButil.dosage}" class="w3-input w3-border" />
+              <h:inputText id="medDosage" value="#{beanDButil.dosage}" class="w3-input w3-border" />
             </h:column>
             <h:column><f:facet name="header"><label class="w3-text-blue">Unit</label></f:facet>
               <h:selectOneMenu value="#{beanDButil.doseUnit}" class="w3-select">
