--- a/source/0.4/src/main/webapp/test.xhtml
+++ b/source/0.4/src/main/webapp/test.xhtml
@@ -254,29 +254,29 @@
         <h:form class="w3-container">
           <h:dataTable value="#{beanDButil}" var="med" class="w3-table-all">
             <h:column><f:facet name="header"><label class="w3-text-blue">Name</label></f:facet>
-              <h:inputText id="medName" value="#{beanDButil.name}" class="w3-input w3-border" />
+              <h:inputText id="medName" value="#{beanDButil.name}" required="true" class="w3-input w3-border" />
             </h:column>
             <h:column><f:facet name="header"><label class="w3-text-blue">Dosage</label></f:facet>
-              <h:inputText id="medDosage" value="#{beanDButil.dosage}" class="w3-input w3-border" />
+              <h:inputText id="medDosage" value="#{beanDButil.dosage}" required="true" class="w3-input w3-border" />
             </h:column>
             <h:column><f:facet name="header"><label class="w3-text-blue">Unit</label></f:facet>
-              <h:selectOneMenu value="#{beanDButil.doseUnit}" class="w3-select">
+              <h:selectOneMenu value="#{beanDButil.doseUnit}" required="true" class="w3-select">
                 <f:selectItem itemValue="g" itemLabel="grams" />
                 <f:selectItem itemValue="mg" itemLabel="milligrams" />
                 <f:selectItem itemValue="ug" itemLabel="micrograms" />
               </h:selectOneMenu>
             </h:column>
             <h:column><f:facet name="header"><label class="w3-text-blue">Issued</label></f:facet>
-              <h:inputText id="medIssued" value="#{beanDButil.issueDate}" class="w3-input w3-border" />
+              <h:inputText id="medIssued" value="#{beanDButil.issueDate}" required="true" class="w3-input w3-border" />
             </h:column>
             <h:column><f:facet name="header"><label class="w3-text-blue">Expires</label></f:facet>
-              <h:inputText id="medExp" value="#{beanDButil.expDate}" class="w3-input w3-border" />
+              <h:inputText id="medExp" value="#{beanDButil.expDate}" required="true" class="w3-input w3-border" />
             </h:column>
             <h:column><f:facet name="header"><label class="w3-text-blue">Patient</label></f:facet>
-              <h:inputText id="medPatient" value="#{beanDButil.patient}" class="w3-input w3-border" />
+              <h:inputText id="medPatient" value="#{beanDButil.patient}" required="true" class="w3-input w3-border" />
             </h:column>
             <h:column><f:facet name="header"><label class="w3-text-blue">Provider</label></f:facet>
-              <h:inputText id="medProvider" value="#{beanDButil.provider}" class="w3-input w3-border" />
+              <h:inputText id="medProvider" value="#{beanDButil.provider}" required="true" class="w3-input w3-border" />
             </h:column>
             <h:column>
               <h:commandButton value="ADD" action="#{beanDButil.addMedication()}" class="w3-button w3-teal"></h:commandButton>
@@ -285,13 +285,13 @@
           </h:dataTable>
           <h:dataTable value="#{beanDButil}" class="w3-table-all">
             <h:column><f:facet name="header"><label class="w3-text-blue">Med Name</label></f:facet>
-              <h:inputText id="medDelName" value="#{beanDButil.name}" class="w3-input w3-border" />
+              <h:inputText id="medDelName" value="#" class="w3-input w3-border" />
             </h:column>
             <h:column><f:facet name="header"><label class="w3-text-blue">Patient</label></f:facet>
-              <h:inputText id="medDelPatient" value="#{beanDButil.patient}" class="w3-input w3-border" />
+              <h:inputText id="medDelPatient" value="#" class="w3-input w3-border" />
             </h:column>
             <h:column><f:facet name="header"><label class="w3-text-blue">Provider</label></f:facet>
-              <h:inputText id="medDelProvider" value="#{beanDButil.provider}" class="w3-input w3-border" />
+              <h:inputText id="medDelProvider" value="#" class="w3-input w3-border" />
             </h:column>
             <h:column>
               <h:commandButton value="DEL" action="#{beanDButil.delMedication()}" class="w3-button w3-red"></h:commandButton>
