--- a/source/0.4/src/main/webapp/main.xhtml
+++ b/source/0.4/src/main/webapp/main.xhtml
@@ -101,7 +101,7 @@
             
 					</div>
         </div>
-        <div class="w3-container w3-center w3-col s4 m4 l4"><h1>myRx</h1></div>
+        <div class="w3-container w3-center w3-col s4 m4 l4"><a href="index.xhtml"><h1>myRX</h1></a></div>
         <div class="w3-container w3-center w3-col s4 m4 l4">
           <h:form>
             <h:commandButton action="#{beanPatient.logout}" value="LOGOUT" class="w3-button w3-green w3-round-xxlarge"></h:commandButton>
