--- a/source/0.4/src/main/webapp/provider-patients.xhtml
+++ b/source/0.4/src/main/webapp/provider-patients.xhtml
@@ -24,7 +24,7 @@
           <a href="provider-profile.xhtml"><button class="w3-button w3-green w3-round-xxlarge">
            #{beanProvider.username}</button></a>
         </div>
-        <div class="w3-container w3-center w3-col s4 m4 l4"><h1>myRx</h1></div>
+        <div class="w3-container w3-center w3-col s4 m4 l4"><a href="index.xhtml"><h1>myRX</h1></a></div>
         <div class="w3-container w3-center w3-col s4 m4 l4">
           <a href="index.xhtml"><button class="w3-button w3-green w3-round-xxlarge">
            LOGOUT</button></a>
