--- a/source/0.4/src/main/webapp/register-provider.xhtml
+++ b/source/0.4/src/main/webapp/register-provider.xhtml
@@ -19,7 +19,7 @@
     <div class="w3-container w3-cell w3-mobile w3-content w3-margin w3-third">
     </div>
     <div class="w3-conatiner w3-cell w3-mobile w3-content w3-margin w3-third">
-      <h1>myRx</h1>
+      <a href="index.xhtml"><h1>myRX</h1></a>
       <h2>User Registration Form</h2>
     </div>
     <div class="w3-container w3-cell w3-mobile w3-content w3-margin w3-third">
