--- a/source/0.4/src/main/webapp/main.xhtml
+++ b/source/0.4/src/main/webapp/main.xhtml
@@ -20,91 +20,56 @@
     
       <div class="w3-container w3-content w3-mobile w3-row w3-padding">
         <div class="w3-container w3-center w3-col s4 m4 l4">
-          <button onclick="document.getElementById('modalPatientProfile').style.display='block'" class="w3-button w3-green w3-round-xxlarge">
+          <button onclick="document.getElementById('modalPatientProfile').style.display='block'" class="w3-button w3-green w3-round-large">
           #{beanPatient.username}</button>
           <div id="modalPatientProfile" class="w3-modal">
             <div class="w3-modal-content w3-container w3-card w3-animate-zoom">
               <span onclick="document.getElementById('modalPatientProfile').style.display='none'" class="w3-button w3-red w3-display-topright">X</span>
-                <h:form id="user-profile-form" class="w3-container">
-                  <h:dataTable value="#{beanDButil.getPatient(beanPatient.username)}" var="pt" class="w3-table-all">
-                    <h:column rowHeader="true"><f:facet name="header"><label class="w3-text-blue">First Name</label></f:facet>
-	                    #{pt.firstName}
-                    <h:inputText id="userFirstName"
-                       value="#{beanDButil.firstName}"
-                       required="true"
-                       class="w3-input w3-border" /></h:column>
-                    <h:column rowHeader="true"><f:facet name="header"><label class="w3-text-blue">Middle Initial</label></f:facet>
-	                    #{pt.middleInitial} 
-                    <h:inputText id="userMiddleInitial"
-                       value="#{beanDButil.middleInitial}"
-                       required="false"
-                       class="w3-input w3-border" /></h:column>
-    					      <h:column rowHeader="true"><f:facet name="header"><label class="w3-text-blue">Last Name</label></f:facet>
-						          #{pt.lastName} 
-					          <h:inputText id="userLastName"
-                       value="#{beanDButil.lastName}"
-                       required="true"
-                       class="w3-input w3-border" /></h:column>
-					          <h:column rowHeader="true"><f:facet name="header"><label class="w3-text-blue">Sex</label></f:facet>
-					            #{pt.sex}
-					            <h:selectOneListbox name="sex"
-													value="#{beanDButil.sex}"
-               						 required="true"
-               						 class="w3-select">
-        						    <f:selectItem itemValue="M" itemLabel="Male" />
-        						    <f:selectItem itemValue="F" itemLabel="Female" />
-       						      <f:selectItem itemValue="N" itemLabel="Nonbinary" />
-        						    <f:selectItem itemValue="X" itemLabel="Do Not Wish To Disclose" />
-       						   </h:selectOneListbox></h:column>
-       					   <h:column rowHeader="true"><f:facet name="header"><label class="w3-text-blue">Email Address</label></f:facet>
-	    				      #{pt.email} 
-      					    <h:inputText id="userEmail"
-                       value="#{beanDButil.email}"
-                       required="true"
-											 class="w3-input w3-border" /></h:column></h:dataTable>
-										<h:dataTable value="#{beanDButil.getPatient(beanPatient.username)}" var="pt" class="w3-table-all">
-   					       <h:column rowHeader="true"><f:facet name="header"><label class="w3-text-blue">Physical Address</label></f:facet>
-	      				    #{pt.address} 
-        					  <h:inputText id="userAddress"
-                       value="#{beanDButil.address}"
-                       required="false"
-                       class="w3-input w3-border" /></h:column>
-      						    <h:column rowHeader="true"><f:facet name="header"><label class="w3-text-blue">Phone Number</label></f:facet>
-      						  	  #{pt.phone} 
-     						     <h:inputText id="userPhone"
-                       value="#{beanDButil.phone}"
-                       required="false"
-                       class="w3-input w3-border" /></h:column>
-      					    <h:column rowHeader="true"><f:facet name="header"><label class="w3-text-blue">Username</label></f:facet>
-	          #{pt.username} 
-          <h:inputText id="userUsername"
-                       value="#{beanDButil.username}"
-                       required="true"
-                       class="w3-input w3-border" /></h:column>
-	    	  <h:column><f:facet name="header"><label class="w3-text-blue">Password</label></f:facet>
-          <h:inputSecret id="userPassword"
-                         value="#{beanDButil.password}"
-                         required="true"
-                         class="w3-input w3-border" />
-          <label class="w3-text-blue">Password Confirmation</label>
-          <h:inputSecret id="userPassword2"
-                         value="#{beanDButil.password2}"
-                         required="true"
-                         class="w3-input w3-border" /></h:column>
-          <h:column rowHeader="true"><h:commandButton value="UPDATE PROFILE"
-                           action="#{beanDButil.updatePatient()}"
-                           class="w3-button w3-teal"></h:commandButton>
-          <button type="reset" class="w3-button w3-teal">RESET</button></h:column>
-      	</h:dataTable>
-      </h:form>
-              </div>
-            
+              <h:form id="user-profile-form" class="w3-container">
+        			<h:dataTable value="#{beanDButil.getPatient(beanPatient.username)}" var="pt" class="w3-table-all">
+					    	<h:column><f:facet name="header"><label class="w3-text-blue">Username</label></f:facet>#{pt.username}</h:column>
+								<h:column><f:facet name="header"><label class="w3-text-blue">Email</label></f:facet>#{pt.email}</h:column>
+						  	<h:column><f:facet name="header"><label class="w3-text-blue">First Name</label></f:facet>#{pt.firstName}</h:column>
+								<h:column><f:facet name="header"><label class="w3-text-blue">MI</label></f:facet>#{pt.middleInitial}</h:column>
+								<h:column><f:facet name="header"><label class="w3-text-blue">Last Name</label></f:facet>#{pt.lastName}</h:column>
+							</h:dataTable><h:dataTable value="#{beanDButil.getPatient(beanPatient.username)}" var="pt" class="w3-table-all">
+								<h:column><f:facet name="header"><label class="w3-text-blue">Sex</label></f:facet>#{pt.sex}</h:column>
+								<h:column><f:facet name="header"><label class="w3-text-blue">Phone</label></f:facet>#{pt.phone}</h:column>
+								<h:column><f:facet name="header"><label class="w3-text-blue">Address</label></f:facet>#{pt.address}</h:column>
+							</h:dataTable><h:dataTable value="#{beanDButil.getPatient(beanPatient.username)}" var="pt" class="w3-table-all">
+								<h:column><f:facet name="header"><label class="w3-text-blue">Username</label></f:facet>
+									<h:inputText value="#{beanPatient.username}" required="true" class="w3-input w3-border" /></h:column>
+								<h:column><f:facet name="header"><label class="w3-text-blue">Email</label></f:facet>
+									<h:inputText value="#{beanPatient.email}" required="true" class="w3-input w3-border" /></h:column>
+								<h:column><f:facet name="header"><label class="w3-text-blue">First Name</label></f:facet>
+									<h:inputText value="#{beanPatient.firstName}" required="true" class="w3-input w3-border" /></h:column>
+								<h:column><f:facet name="header"><label class="w3-text-blue">MI</label></f:facet>
+									<h:inputText value="#{beanPatient.middleInitial}" required="true" class="w3-input w3-border" /></h:column>
+								<h:column><f:facet name="header"><label class="w3-text-blue">Last Name</label></f:facet>
+									<h:inputText value="#{beanPatient.lastName}" required="true" class="w3-input w3-border" /></h:column>
+								<h:column><f:facet name="header"><label class="w3-text-blue">Sex</label></f:facet>
+									<h:selectOneMenu value="#{beanPatient.sex}" required="true" class="w3-input w3-border">
+										<f:selectItem itemValue="M" itemLabel="Male" />
+										<f:selectItem itemValue="F" itemLabel="Female" />
+										<f:selectItem itemValue="N" itemLabel="Non-Binary" />
+										<f:selectItem itemValue="X" itemLabel="Do Not Wish To Disclose" /></h:column>
+								<h:column><f:facet name="header"><label class="w3-text-blue">Phone</label></f:facet>
+									<h:inputText value="#{beanPatient.phone}" required="false" class="w3-input w3-border" /></h:column>
+								<h:column><f:facet name="header"><label class="w3-text-blue">Password</label></f:facet>
+									<h:inputSecret value="#{beanPatient.password}" required="true" class="w3-input w3-border" />
+									<h:inputSecret value="#{beanPatient.password2}" required="true" class="w3-input w3-border" /></h:column>
+								<h:column><h:commandButton value="UPDATE PROFILE" action="#{beanPatient.updateProfile()}" class="w3-button w3-teal w3-round-large" />
+        					<button type="reset" class="w3-button w3-teal w3-round-large">RESET</button></h:column>
+								</h:dataTable>
+							</h:form>
+							<button onclick="document.getElementById('modalPatientProfile').style.display='none'" class="w3-button w3-green w3-round-large">CLOSE</button>
+           	</div>
 					</div>
         </div>
         <div class="w3-container w3-center w3-col s4 m4 l4"><a href="index.xhtml"><h1>myRX</h1></a></div>
         <div class="w3-container w3-center w3-col s4 m4 l4">
           <h:form>
-            <h:commandButton action="#{beanPatient.logout}" value="LOGOUT" class="w3-button w3-green w3-round-xxlarge"></h:commandButton>
+            <h:commandButton action="#{beanPatient.logout}" value="LOGOUT" class="w3-button w3-green w3-round-large"></h:commandButton>
           </h:form>
         </div>
       </div>
@@ -144,11 +109,11 @@
     <div id="bottom" class="w3-container w3-mobile w3-card w3-teal">
       <div class="w3-container w3-bar w3-mobile w3-row w3-padding">
         <a href="index.xhtml">
-          <div class="w3-container w3-center w3-col s3 m3 l3"><button class="w3-button w3-white w3-round-xxlarge">HOME</button>
+          <div class="w3-container w3-center w3-col s3 m3 l3"><button class="w3-button w3-white w3-round-large">HOME</button>
           </div>
         </a>
         <a href="patient-profile.xhtml">
-          <div class="w3-container w3-center w3-col s3 m3 l3"><button class="w3-button w3-white w3-round-xxlarge">PROFILE-PAGE</button>
+          <div class="w3-container w3-center w3-col s3 m3 l3"><button class="w3-button w3-white w3-round-large">PROFILE-PAGE</button>
           </div>
         </a>
       </div>
