--- a/source/0.4/src/main/webapp/main.xhtml
+++ b/source/0.4/src/main/webapp/main.xhtml
@@ -52,7 +52,7 @@
 										<f:selectItem itemValue="M" itemLabel="Male" />
 										<f:selectItem itemValue="F" itemLabel="Female" />
 										<f:selectItem itemValue="N" itemLabel="Non-Binary" />
-										<f:selectItem itemValue="X" itemLabel="Do Not Wish To Disclose" /></h:column>
+										<f:selectItem itemValue="X" itemLabel="Do Not Wish To Disclose" /></h:selectOneMenu></h:column>
 								<h:column><f:facet name="header"><label class="w3-text-blue">Phone</label></f:facet>
 									<h:inputText value="#{beanPatient.phone}" required="false" class="w3-input w3-border" /></h:column>
 								<h:column><f:facet name="header"><label class="w3-text-blue">Password</label></f:facet>
