--- a/source/0.4/src/main/webapp/main.xhtml
+++ b/source/0.4/src/main/webapp/main.xhtml
@@ -102,7 +102,7 @@
         </h:column>
         <h:column>
           <f:facet name="header">Provider</f:facet>
-          #{med.prescriber}
+          #{med.provider}
         </h:column>
       </h:dataTable>
 
