--- a/source/0.4/src/main/webapp/main.xhtml
+++ b/source/0.4/src/main/webapp/main.xhtml
@@ -13,20 +13,20 @@
 </head>
 <body>
 
-<div class="w3-content">
+<div>
   <div id="body" class="w3-container w3-mobile w3-auto">
   
-    <div id="top" class="w3-container w3-bar w3-teal w3-card">
+    <div id="top" class="w3-bar w3-teal w3-card">
     
-      <div class="w3-container w3-content w3-mobile w3-row w3-padding">
+      <div class="w3-container w3-mobile w3-row w3-padding">
         <div class="w3-container w3-center w3-col s4 m4 l4">
           <button onclick="document.getElementById('modalPatientProfile').style.display='block'" class="w3-button w3-green w3-round-large">
           #{beanPatient.username}</button>
           <div id="modalPatientProfile" class="w3-modal">
             <div class="w3-modal-content w3-container w3-card w3-animate-zoom">
-              <span onclick="document.getElementById('modalPatientProfile').style.display='none'" class="w3-button w3-red w3-display-topright">X</span>
+              <span onclick="document.getElementById('modalPatientProfile').style.display='none'" class="w3-button w3-red w3-display-topright">&times</span>
               <h:form id="user-profile-form" class="w3-container">
-        			<h:dataTable value="#{beanDButil.getPatient(beanPatient.username)}" var="pt" class="w3-table-all">
+        			<h:dataTable value="#{beanDButil.getPatient(beanPatient.username)}" var="pt" class="w3-table-all w3-responsive">
 					    	<h:column><f:facet name="header"><label class="w3-text-blue">Username</label></f:facet>#{pt.username}</h:column>
 								<h:column><f:facet name="header"><label class="w3-text-blue">Email</label></f:facet>#{pt.email}</h:column>
 						  	<h:column><f:facet name="header"><label class="w3-text-blue">First Name</label></f:facet>#{pt.firstName}</h:column>
