--- a/source/0.4/src/main/webapp/register.xhtml
+++ b/source/0.4/src/main/webapp/register.xhtml
@@ -15,7 +15,7 @@
 
 <div class="w3-content">
 
-  <div id="header" class="header w3-container w3-row w3-cell-row w3-bar w3-teal w3-card w3-section">
+  <div id="header" class="header w3-container w3-row w3-cell-row w3-bar w3-teal w3-card">
     <div class="w3-container w3-cell w3-mobile w3-content w3-margin w3-third">
     </div>
     <div class="w3-conatiner w3-cell w3-mobile w3-content w3-margin w3-third">
@@ -28,7 +28,7 @@
 
   <div class="w3-cell-row w3-section">
 
-    <div class="w3-container w3-cell w3-cell-middle w3-mobile w3-twothird">
+    <div class="w3-container w3-cell w3-cell-middle w3-mobile">
       <h:form id="patientRegistrationForm" class="w3-container">
         <label class="w3-text-blue">Email Address</label>
         <h:inputText id="userEmail"
@@ -92,15 +92,9 @@
       </h:form>
     </div>
 
-    <div id="right" class="w3-container w3-cell w3-cell-middle w3-mobile w3-third">
-      <table class="w3-table">
-        <tr>Please fill out all applicable fields.</tr>
-      </table>
-    </div>
-
   </div>
 
-  <div id="footer" class="footer w3-container w3-bar w3-teal w3-card w3-section">
+  <div id="footer" class="footer w3-container w3-bar w3-teal w3-card">
     <a href="index.xhtml"><h2>myRX</h2></a>
   </div>
 	
